--- a/src/sass/elements/_menu.scss
+++ b/src/sass/elements/_menu.scss
@@ -19,7 +19,8 @@
 
 		/* TODO dark:hover:bg-white/5   ima vec u globalu. Videti da li obrisati ovah hover i ostaviti onaj tamo samo. Rizicno je malo, sta ako se promeni ta klasa */
 		&:hover {
-			background-color: var(--c-surface-2) !important;
+			// background-color: var(--c-surface-2) !important;
+			background-color: var(--c-bg-contextmenu-item) !important;
 		}
 	}
 
@@ -106,7 +107,8 @@ div[data-radix-popper-content-wrapper] {
 	/* MODAL - Choose theme context menuitem hover */
 	[data-radix-collection-item][data-state='unchecked'] {
 		&:hover {
-			background-color: var(--c-surface-2) !important;
+			// background-color: var(--c-surface-2) !important;
+			background-color: var(--c-bg-contextmenu-item) !important;
 			outline: none !important; // TODO this is temp fix. This ecause there were somewhite uglu outline on hover. But this also breaks :focus-visible accessibility style...
 		}
 	}
